# sleep-detector-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-18-multi-modal-architecture-design.md  2026-03-18-next-gen-dms-implementation.md
sleep_detector_sdk/: __init__.py  alerts.py  camera.py  cli.py  detector.py  ear.py  events.py  fatigue_model.py  fusion.py  gaze.py  model_manager.py  pose.py  privacy.py  sensors.py  temporal.py  types.py
sleep_detector_sdk/plugins/: physiological.py  steering.py
tests/: conftest.py  test_alerts.py  test_camera.py  test_cli.py  test_detector.py  test_ear.py  test_events.py  test_fatigue_model.py  test_fusion.py  test_gaze.py  test_model_manager.py  test_packaging.py  test_plugins.py  test_pose.py  test_privacy.py  test_sensors.py  test_temporal.py  test_types.py  test_version.py
